# echo

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  TODO.md  automate.sh  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  docker-dev.sh  docker.sh  iac-docker.sh  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/stack/: docker.instructions.md  git-lfs.instructions.md  python-docker.instructions.md  python.instructions.md  sveltekit.instructions.md
ai/: Dockerfile  __init__.py  inference.py  metrics.py  plots.py  pyproject.toml  train.py  trainer.py
ai/notebooks/: convnext-tiny.ipynb  mobilenetv3.ipynb  resnet50.ipynb
ai/results/: convnext-tiny-b16-img224-e60-lr-5e-4.json  mobilenet-v3-large-b32-img224-e60-lr-5e-4.json  resnet50-b32-img224-e60-lr-1e-3.json
automate/: Dockerfile  automate.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  detection.py  inference.py  load_model.py  main.py  paths.py  predict.py
backend/data/: metrics.duckdb
backend/tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_database.py  test_e2e.py  test_inference.py  test_integration.py
data/: README.md
data/detection/: data.yaml
data/detection/test/labels/: 1003_jpg.rf.028d6d76fba92dd9e5dc59dc9d0f7293.txt  1012_jpg.rf.a9d8d27f5e1d382e0b93ff4a479f4519.txt  1018_jpg.rf.29ed2fb6754ca58ae27204ef24344650.txt  102_jpg.rf.e58e0fc30dfea3a7a410d7b901223f16.txt  1033_jpg.rf.1b4c0f5bdf30ec0ba218874a3a737720.txt  1037_jpg.rf.7c415f051556bbba83bc00f70fe54818.txt  1041_jpg.rf.252e75e8f025b79f801db895122613d3.txt  1046_jpg.rf.26dd526422308d6d9e989d3308a9ee03.txt  104_jpg.rf.e74d25768eb80e77624670d6bc966b81.txt  1058_jpg.rf.a8d95af23ed6b011705441ef351c1f73.txt  1072_jpg.rf.e116d0d5edd77ef8dc6867dc9813b964.txt  1077_jpg.rf.db5d4838f58af179937c0d9bb7bceb82.txt  1083_jpg.rf.daf08bfc8ac851e42c0459c9ce165323.txt  1087_jpg.rf.11aea0eb9fc21920ffd9adc7f86be8a5.txt  1090_jpg.rf.49e77ec069279939ebd855ac1f14912c.txt  1091_jpg.rf.5308c91865f1e3a19de6936a0d295339.txt  10_jpg.rf.efaf1af26de11dabdda3214f4457c931.txt  1122_jpg.rf.e5b7d9dd059312db750f9a9574ab9cf2.txt  1125_jpg.rf.82a5cbb71e2dc11bb6227afeaf7eada8.txt  1157_jpg.rf.034c9ffcd15fd9a89a3af651dabfeb67.txt  1164_jpg.rf.2d69d2534cff1bce9e8f3a96de7e3195.txt  1177_jpg.rf.ad059478ecfb84cd3daad08e6c40646f.txt  1178_jpg.rf.05e49b5e0a7310cbbdecc37e48153491.txt  1186_jpg.rf.b37c183c5d9541bde71a0f147073edcb.txt  1188_jpg.rf.ba278053ab4d8aed98dc19ce2aee4e5e.txt  1209_jpg.rf.5197fbf7b3d5d06ad469e24df07b3e4e.txt  1231_jpg.rf.ff2478caf59fb9b4e63ae6190608b1eb.txt  125_jpg.rf.4967795739a86b7885115d2ba13c98cc.txt  1270_jpg.rf.b59f6d8cdace875bcf9e211aeaedc570.txt  1274_jpg.rf.791d7f528473a46e7cb8ef31b8a585cc.txt  1275_jpg.rf.099b1fbe3e7c996412b34c679330289d.txt  1284_jpg.rf.a1575f88de4a845442dcd7ac7c7ff607.txt  1285_jpg.rf.d5f52bd729b738690f1a30c95bd34bb8.txt  130_jpg.rf.f26fbad203da20d0a9c229b7ecbea70d.txt  1311_jpg.rf.3c072180d36416037748e0147ee0ad2a.txt  1340_jpg.rf.42969e05e60cdacfba091ff9a0e709e0.txt  1341_jpg.rf.30e1b2a6fab5123e075bee034679f782.txt  1342_jpg.rf.d282167faddbd34230fe5dd2e536e7c5.txt  1343_jpg.rf.dd4963fa0550386236d4b93228a3a68a.txt  1344_jpg.rf.6570648282314bc21a98981bce45470f.txt  (+268 more)
data/detection/train/labels/: 1002_jpg.rf.74495c845455dec52db120e378834be9.txt  1004_jpg.rf.1ef451458c994287cc6a303d1048d017.txt  1006_jpg.rf.fc1decff7e5c0e9af779c80fbfd26275.txt  1007_jpg.rf.d2ff78395394770c2ea7fd02965bccb1.txt  1008_jpg.rf.b5c98342f457ce16526ec486f87d3b16.txt  1009_jpg.rf.4ddd6ac98adfba1fae9f3234b099c94a.txt  (+2138 more)
frontend/: Dockerfile  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/routes/: +page.server.ts  +page.svelte
frontend/static/: style.css
frontend/templates/: index.html
iac/: README.md  Vagrantfile  ansible.cfg  iac-docker.sh
iac/playbooks/: inventory.ini  main.yml
k8s/: README.md  ai-deployment.yaml  ai-service.yaml  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  nginx-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml  persistent-volume.yaml  vision-deployment.yaml  vision-service.yaml
legacy/models/: metrics.ipynb
models/: __init__.py  config.py  convnext-tiny-b16-img224-e60-lr-5e-4.pt  convnext-tiny-b32-img224-e60-lr-5e-4.pt  mobilenet-v3-large-b16-img224-e60-lr-5e-4.pt  mobilenet-v3-large-b32-img224-e60-lr-5e-4.pt  resnet50-b32-img224-e60-lr-1e-3.pt  train.py  trainer.py
models/classification/: convnext-tiny-b16-img224-e150-lr-8_823e-3.pt  convnext-tiny-b64-img224-e100-lr-8_102e-3.pt  efficientnet-v2-s-b16-img224-e150-lr-8_102e-3.pt  mobilenet-v3-large-b16-img224-e150-lr-8_846e-3.pt
models/detection/: yolo-brain-tumor.pt
models/experiments/: convnext-tiny.ipynb  mobilenetv3.ipynb  resnet50.ipynb
models/results/: mobilenet-v3-large-b16-img224-e60-lr-5e-4.json
modules/: paths.py
nginx/: nginx-dev.conf  nginx.conf
scripts/: enhance_dataset.py  gen_distribution_plot.py  split_dataset.py
shared/: __init__.py  paths.py
vision/: Dockerfile  __init__.py  classification-pipeline.sh  config.py  detection-pipeline.sh  evaluate.py  paths.py  pyproject.toml  train.py  trainer.py
vision/classification/: __init__.py  cli.py  engine.py
vision/common/: __init__.py  config.py  paths.py  visualize.py
vision/detection/: __init__.py  cli.py  engine.py
vision/notebooks/: convnext-tiny.ipynb  mobilenetv3.ipynb  resnet50.ipynb
vision/results/: convnext-tiny-b16-img224-e150-lr-8_823e-3.json  convnext-tiny-b32-img224-e60-lr-5e-4.json  convnext-tiny-b64-img224-e100-lr-8_102e-3.json  efficientnet-v2-s-b16-img224-e150-lr-8_102e-3.json  mobilenet-v3-large-b16-img224-e150-lr-8_846e-3.json  resnet50-b32-img224-e60-lr-1e-3-history.parquet
vision/results/plots/: convnext-tiny-b16-img224-e150-lr-8_823e-3.html  convnext-tiny-b64-img224-e100-lr-8_102e-3.html  efficientnet-v2-s-b16-img224-e150-lr-8_102e-3.html  mobilenet-v3-large-b16-img224-e150-lr-8_846e-3.html
(+613 files in other folders)
