[tool.poetry]
name = "arc"
version = "0.1.0"
description = "Arc Project Root"
authors = ["Vincent Boettcher <vin.br@runbox.no>"]
packages = [ { include = "modules" } ]

[tool.poetry.dependencies]
python = "==3.14.*"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
jinja2 = "^3.1.6"
pillow = "^12.0.0"
torch = "^2.9.1"
torchvision = "^0.24.1"
python-multipart = "^0.0.20"
ipykernel = "^7.1.0"
duckdb = "^1.4.3"
polars = "^1.36.1"
plotly = "^6.5.0"
rich = "^14.2.0"
pyarrow = "^22.0.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
black = "^25.12.0"
flake8 = "^7.3.0"

[tool.black]
line-length = 100
