[project]
name = "echo"
version = "26.05.2"
description = "ECHO — Brain tumor detection, classification, and annotation"
authors = [{name = "Vincent Boettcher", email = "vin.br@runbox.no"}]
requires-python = ">=3.14"
dependencies = [
    # vision
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "pillow>=12.2.0",
    "plotly>=6.5.0",
    "rich>=14.2.0",
    "mlflow>=3.12.0",
    "ultralytics>=8.4.52",
    "opencv-python-headless>=4.13.0.92",
    "optuna>=4.5.0",
    # backend
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "python-multipart>=0.0.29",
    "duckdb>=1.5.3",
    # automate
    "playwright>=1.60.0",
    "kaleido>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.uv]
override-dependencies = ["opencv-python; python_version < '3.0'"]
