[tool.poetry]
name = "arc-ai"
version = "0.1.0"
description = "AI Training Service for ARC"
authors = ["Vincent Boettcher <vin.br@runbox.no>"]
package-mode = false

[tool.poetry.dependencies]
python = "==3.14.*"
torch = "^2.9.1"
torchvision = "^0.24.1"
pillow = "^12.0.0"
polars = "^1.36.1"
plotly = "^6.5.0"
rich = "^14.2.0"
pyarrow = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"