[project]
name = "echo-automate"
version = "26.05.2"
description = "ECHO Screenshot and GIF automation for documentation"
authors = [{name = "Vincent Boettcher", email = "vin.br@runbox.no"}]
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.60.0",
    "Pillow>=12.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
