[project]
name = "arc-backend"
version = "26.05.1"
description = "Backend for ARC"
authors = [{name = "Vincent Boettcher", email = "vin.br@runbox.no"}]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "pillow>=12.2.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "python-multipart>=0.0.29",
    "polars>=1.40.1",
    "duckdb>=1.5.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = [".."]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
