[project]
name = "arc-vision"
version = "26.05.1"
description = "Vision Training Service for ARC"
authors = [{name = "Vincent Boettcher", email = "vin.br@runbox.no"}]
requires-python = ">=3.14"
dependencies = [
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "pillow>=12.2.0",
    "polars>=1.40.1",
    "plotly>=6.5.0",
    "rich>=14.2.0",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]