[project]
name = "echo-vision"
version = "26.05.2"
description = "Vision Training Service for ECHO"
authors = [{name = "Vincent Boettcher", email = "vin.br@runbox.no"}]
requires-python = ">=3.14"
dependencies = [
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "pillow>=12.2.0",
    "plotly>=6.5.0",
    "rich>=14.2.0",
    "mlflow>=3.12.0",
    "ultralytics>=8.4.52",
    "opencv-python-headless>=4.6.0",
    "optuna>=4.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = [".."]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100

[tool.uv]
override-dependencies = ["opencv-python; python_version < '3.0'"]